--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,13 +33,15 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Sistema_ferreteria
 excludes=
+file.reference.JTattoo-1.6.13.jar=librerias\\JTattoo-1.6.13.jar
 file.reference.mysql-connector-j-8.2.0.jar=C:\\Users\\PC_TONY\\Downloads\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQL.classpath}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-j-8.2.0.jar}
+    ${file.reference.mysql-connector-j-8.2.0.jar}:\
+    ${file.reference.JTattoo-1.6.13.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
