--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\PC_TONY\\AppData\\Roaming\\NetBeans\\19\\build.properties
+user.properties.file=C:\\Users\\Carlos\\AppData\\Roaming\\NetBeans\\19\\build.properties
