--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,4 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\PC_TONY\\AppData\\Roaming\\NetBeans\\19\\build.properties
+file.reference.JTattoo-1.6.13.jar=D:\\Descargas\\JTattoo-1.6.13.jar
+file.reference.mysql-connector-j-8.2.0.jar=D:\\Descargas\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0.jar
+user.properties.file=C:\\Users\\Carlos\\AppData\\Roaming\\NetBeans\\19\\build.properties
