--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,7 @@ excludes=
 file.reference.JTattoo-1.6.13.jar=librerias\\JTattoo-1.6.13.jar
 file.reference.mysql-connector-j-8.2.0.jar=C:\\Users\\PC_TONY\\Downloads\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0.jar
 file.reference.mysql-connector-j-8.2.0.jar-1=C:\\Users\\PC_TONY\\Desktop\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0.jar
+file.reference.mysql-connector-j-8.2.0.jar-2=C:\\Users\\PC_TONY\\Desktop\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -43,7 +44,8 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.mysql-connector-j-8.2.0.jar}:\
     ${file.reference.JTattoo-1.6.13.jar}:\
-    ${file.reference.mysql-connector-j-8.2.0.jar-1}
+    ${file.reference.mysql-connector-j-8.2.0.jar-1}:\
+    ${file.reference.mysql-connector-j-8.2.0.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
