--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Sistema_ferreteria
 excludes=
+file.reference.jcalendar-1.4.jar=C:\\Users\\PC_TONY\\Desktop\\Nueva carpeta\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.JTattoo-1.6.13.jar=librerias\\JTattoo-1.6.13.jar
 file.reference.mysql-connector-j-8.2.0.jar=C:\\Users\\PC_TONY\\Downloads\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0.jar
 file.reference.mysql-connector-j-8.2.0.jar-1=C:\\Users\\PC_TONY\\Desktop\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0.jar
@@ -45,7 +46,8 @@ javac.classpath=\
     ${file.reference.mysql-connector-j-8.2.0.jar}:\
     ${file.reference.JTattoo-1.6.13.jar}:\
     ${file.reference.mysql-connector-j-8.2.0.jar-1}:\
-    ${file.reference.mysql-connector-j-8.2.0.jar-2}
+    ${file.reference.mysql-connector-j-8.2.0.jar-2}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
