--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,6 +34,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Sistema_ferreteria
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\PC_TONY\\Desktop\\Nueva carpeta\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=C:\\Program Files\\NetBeans-19\\netbeans\\java\\modules\\jcalendar-1.4.jar
 file.reference.JTattoo-1.6.13.jar=librerias\\JTattoo-1.6.13.jar
 file.reference.mysql-connector-j-8.2.0.jar=C:\\Users\\PC_TONY\\Downloads\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0.jar
 file.reference.mysql-connector-j-8.2.0.jar-1=C:\\Users\\PC_TONY\\Desktop\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0.jar
@@ -47,7 +48,8 @@ javac.classpath=\
     ${file.reference.JTattoo-1.6.13.jar}:\
     ${file.reference.mysql-connector-j-8.2.0.jar-1}:\
     ${file.reference.mysql-connector-j-8.2.0.jar-2}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
