--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,7 @@
 compile.on.save=true
+file.reference.jcalendar-1.4.jar=C:\\Program Files\\NetBeans-19\\netbeans\\java\\modules\\jcalendar-1.4.jar
 file.reference.JTattoo-1.6.13.jar=D:\\Descargas\\JTattoo-1.6.13.jar
 file.reference.mysql-connector-j-8.2.0.jar=D:\\Descargas\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0.jar
 file.reference.mysql-connector-j-8.2.0.jar-1=C:\\Program Files\\NetBeans-19\\netbeans\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0.jar
-user.properties.file=C:\\Users\\PC_TONY\\AppData\\Roaming\\NetBeans\\19\\build.properties
+file.reference.mysql-connector-j-8.2.0.jar-2=C:\\Program Files\\NetBeans-19\\netbeans\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0.jar
+user.properties.file=C:\\Users\\Carlos\\AppData\\Roaming\\NetBeans\\19\\build.properties
