cambios en el form clientes y llenado de BD

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,6 +39,7 @@ file.reference.JTattoo-1.6.13.jar=librerias\\JTattoo-1.6.13.jar
 file.reference.mysql-connector-j-8.2.0.jar=C:\\Users\\PC_TONY\\Downloads\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0.jar
 file.reference.mysql-connector-j-8.2.0.jar-1=C:\\Users\\PC_TONY\\Desktop\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0.jar
 file.reference.mysql-connector-j-8.2.0.jar-2=C:\\Users\\PC_TONY\\Desktop\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0.jar
+file.reference.mysql-connector-j-8.2.0.jar-3=C:\\Users\\PC_TONY\\Desktop\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -49,7 +50,8 @@ javac.classpath=\
     ${file.reference.mysql-connector-j-8.2.0.jar-1}:\
     ${file.reference.mysql-connector-j-8.2.0.jar-2}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.jcalendar-1.4.jar-1}
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.mysql-connector-j-8.2.0.jar-3}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
